...
                android:maxLines="3"
                android:text="NOMBRE CANCHA"
                android:textColor="#000"
                android:textSize="24dp" />

            <Button
                android:id="@+id/buttoninfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
...
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/canchaimg1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />

            <ImageView
                android:id="@+id/canchaimg2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />

            <ImageView
                android:id="@+id/canchaimg3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />
...
                    android:text="Número teléfonico"
                    android:textColor="#044" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttoncancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="#400"
            android:text="CANCELAR RESERVA"
            android:textColor="#FFF" />

    </LinearLayout>
</ScrollView>
